--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ the <a href="https://www.tcs.tifr.res.in/web/">School of Technology and Computer
 <p>I completed my Bachelor&rsquo;s degree in Mathematics and Computer Science from <a href="https://www.cmi.ac.in/" title="CMI">Chennai Mathematical Institute</a>.</p>
 <p>I am broadly interested in combinatorics and theoretical computer science.</p>
 <p>Here is my <a href="/cv.pdf" title="CV">CV</a>.</p>
-<p>You can contact me at soumyadeep.paul[at]tifr[dot]res[dot]in or at soumyadeeppaul[dot]cs[at]gmail[at]com.</p>
+<p>You can contact me at soumyadeep.paul[at]tifr[dot]res[dot]in or at soumyadeeppaul[dot]cs[at]gmail[dot]com.</p>
 
 
 
