--- a/coursework/index.html
+++ b/coursework/index.html
@@ -124,9 +124,16 @@
 
   <div class="single-content">
     <!-- raw HTML omitted -->
+<h2 id="tifr">TIFR</h2>
+<h3 id="computer-science">Computer Science</h3>
+<ul>
+<li>Mathematical Foundations of Computer Science</li>
+<li>Probability</li>
+<li>Algorithms and Data Structures</li>
+</ul>
 <!-- raw HTML omitted -->
 <h2 id="chennai-mathematical-institute">Chennai Mathematical Institute</h2>
-<h3 id="computer-science">Computer Science</h3>
+<h3 id="computer-science-1">Computer Science</h3>
 <ul>
 <li>Introduction to Programming (Haskell)</li>
 <li>Advanced Programming</li>
