--- a/hobbies/index.html
+++ b/hobbies/index.html
@@ -23,7 +23,7 @@
 
 
 
-<link rel="stylesheet" href="/assets/combined.min.9fa0bf36e2bf38d5578b9ce69c33de8da4447820878fe56f6325487831ab7dd3.css" media="all">
+<link rel="stylesheet" href="/assets/combined.min.8d3e0b962a9121c5c751839e4df9621207df441a75dfb479f6c86ede2f78e763.css" media="all">
 
 
 
@@ -126,7 +126,7 @@
     <!-- raw HTML omitted -->
 <p>Sometimes, in my free time, I make electronic music and do sound designing for games.</p>
 <p>You can check out some of my music <a href="https://www.youtube.com/playlist?list=PLjD0BNC_EUN7z3Ilu8_uLwVTX08rPwJkT" title="Music">here</a>.</p>
-<p>These are some games for which I made the sound tracks and/or sound effects: <a href="https://smdp.itch.io/" title="itch.io">smdp.itch.io</a>.</p>
+<p>These are some games for which I made the sound tracks and/or sound effects: <a href="https://sodacity.itch.io/" title="itch.io">itch.io</a>.</p>
 
     
   </div>
