--- a/hobbies/index.html
+++ b/hobbies/index.html
@@ -125,7 +125,7 @@
   <div class="single-content">
     <!-- raw HTML omitted -->
 <p>Sometimes, in my free time, I make electronic music and do sound designing for games.</p>
-<p>You can check out some of my music <a href="https://www.youtube.com/playlist?list=PLjD0BNC_EUN7z3Ilu8_uLwVTX08rPwJkT" title="Music">here</a>.</p>
+<p>You can check out some of my music <a href="https://sodacity.bandcamp.com/" title="Music">here</a>.</p>
 <p>These are some games for which I made the sound tracks and/or sound effects: <a href="https://sodacity.itch.io/" title="itch.io">itch.io</a>.</p>
 
     
